--- a/css/style.css
+++ b/css/style.css
@@ -1,85 +1,13 @@
-body {
-  margin: 0px;
-}
+/* Estilos globais */
+@import "/css/global.css/global.css";
+@import "/css/global.css/tipografia.css";
+@import "/css/global.css/cores.css";
 
-ul {
-  margin: 0px;
-  padding: 0px;
-  list-style: none;
-}
+/* Header */
+@import "/css/global.css/header.css";
 
-a {
-  text-decoration: none;
-}
+/* Home */
+@import "/css/home/introducao.css";
 
-.header-bg {
-  background-color: #000;
-}
-
-.header {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 20px;
-  justify-content: space-between;
-  align-items: center;
-  padding: 20px;
-  max-width: 1200px;
-  box-sizing: border-box;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.header-menu {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 40px;
-}
-
-.header-menu a {
-  padding: 20px 0px;
-  font-family: "Poppins";
-  display: inline-block;
-  color: #fff;
-  font-size: 1.125rem;
-  position: relative;
-}
-
-.header-menu a::after {
-  content: " ";
-  display: block;
-  height: 2px;
-  width: 0px;
-  background-color: #fff;
-  margin-top: 4px;
-  position: absolute;
-}
-
-.header-menu a:hover::after {
-  width: 100%;
-  transition: 0.3s;
-}
-
-@media (max-width: 800px) {
-  .header-menu a {
-    background-color: #111;
-    padding: 12px 16px;
-    border-radius: 4px;
-  }
-  .header-menu a:hover {
-    background-color: #2e2e2e;
-    transition: 0.35s;
-  }
-  .header-menu a::after {
-    display: none;
-  }
-}
-
-@media (max-width: 600px) {
-  .header-menu {
-    gap: 12px;
-  }
-  .header-menu a {
-    padding: 8px 12px;
-    font-size: 1rem;
-  }
-}
+/* Bicicletas */
+@import "/css/bicicletas/bicicletas-lista.css";
