--- a/css/global.css/global.css
+++ b/css/global.css/global.css
@@ -25,7 +25,7 @@ span {
   display: grid;
   grid-template-columns: 1fr 1fr;
   max-width: 1200px;
-  box-sizing: border-box;
+  box-sizing: content-box;
   gap: 0px 40px;
   margin: 0 auto;
   padding-left: 40px;
@@ -45,6 +45,26 @@ span {
 
 .btn:hover {
   background: linear-gradient(180deg, #ffb60d 0%, #e59317 100%);
+}
+
+.link {
+  display: inline-block;
+  color: var(--cor-p1);
+  font: 500 1.5rem/1.5 "Poppins", sans-serif;
+  text-transform: uppercase;
+}
+
+.link::after {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 4px;
+  background-color: currentColor;
+  margin-top: 4px;
+}
+
+.link:hover{
+  color: var(-cor-0);
 }
 
 p {
