--- a/css/global.css/header.css
+++ b/css/global.css/header.css
@@ -8,9 +8,9 @@
   gap: 20px;
   justify-content: space-between;
   align-items: center;
-  padding: 20px;
+  padding-bottom: 20px;
+  padding-top: 20px;
   max-width: 1200px;
-  box-sizing: border-box;
   margin-left: auto;
   margin-right: auto;
 }
@@ -35,11 +35,11 @@
   background-color: #fff;
   margin-top: 4px;
   position: absolute;
+  transition: 0.3s;
 }
 
 .header-menu a:hover::after {
   width: 100%;
-  transition: 0.3s;
 }
 
 @media (max-width: 800px) {
