--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@
 
 /* Home */
 @import "/css/home/introducao.css";
+@import "/css/home/tecnologia.css";
 
 /* Bicicletas */
 @import "/css/bicicletas/bicicletas-lista.css";
