--- a/css/global.css/cores.css
+++ b/css/global.css/cores.css
@@ -13,6 +13,8 @@
   --cor-11: #111;
   --cor-12: #000;
   --cor-p1: #ffbb00;
+  --cor-p2: #e4a30b;
+  --cor-p4: #664400;
   --cor-p5: #332200;
 }
 
@@ -58,6 +60,10 @@
 
 .cor-p1 {
   color: var(--cor-p1);
+}
+
+.cor-p4 {
+  color: var(--cor-p4);
 }
 
 .cor-p5 {
