--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,10 @@
 /* Home */
 @import "/css/home/introducao.css";
 @import "/css/home/tecnologia.css";
+@import "/css/home/parceiros.css";
+@import "/css/home/depoimento.css";
+
+@import "/css/seguros/seguros.css";
 
 /* Bicicletas */
 @import "/css/bicicletas/bicicletas-lista.css";
