--- a/css/style.css
+++ b/css/style.css
@@ -18,5 +18,8 @@
 /* Seguros */
 @import "/css/seguros/seguros.css";
 
+/* Termos */
+@import "/css/termos/termos.css";
+
 /* Bicicletas */
 @import "/css/bicicletas/bicicletas-lista.css";
