--- a/css/global.css/global.css
+++ b/css/global.css/global.css
@@ -57,6 +57,25 @@ span {
   background: var(--cor-9);
 }
 
+.btn.seta {
+  display: flex;
+  align-items: center;
+}
+
+.btn.seta::after {
+  content: "";
+  display: inline-block;
+  width: 18px;
+  height: 10px;
+  margin-left: 12px;
+  background-image: url("/img/icones/seta.svg");
+  transition: .2s;
+}
+
+.btn.seta:hover::after {
+  transform: translateX(4px);
+}
+
 .link {
   display: inline-block;
   color: var(--cor-p1);
@@ -83,7 +102,7 @@ span {
   padding-bottom: 60px;
 }
 
-.titulo h1{
+.titulo h1 {
   grid-column: 1/-1;
 }
 
@@ -97,11 +116,10 @@ span {
     padding-bottom: 40px;
   }
   .titulo p {
-  font-size: 1rem;
-  font-weight: 400;
+    font-size: 1rem;
+    font-weight: 400;
   }
 }
-
 
 p {
   font-size: 1.5rem;
