página de contato, coom formulário e mapa das lojas

--- a/css/global/global.css
+++ b/css/global/global.css
@@ -44,6 +44,8 @@ span {
   border-radius: 5px;
   color: var(--cor-p5);
   text-transform: uppercase;
+  border: none;
+  cursor: pointer;
 }
 
 .btn:hover {
