--- a/css/global/tipografia.css
+++ b/css/global/tipografia.css
@@ -17,6 +17,7 @@
 .font-1-m,
 .font-1-m-b {
   font: 400 1.125rem/1.35 "Poppins", sans-serif;
+  letter-spacing: 0.035em;
 }
 
 .font-1-m-b {
@@ -66,7 +67,7 @@
 
 @media (max-width: 800px) {
   .font-1-xxl {
-    font-size: 2rem;
+    font-size: 2.5rem;
   }
   .font-1-xl,
   .font-2-xl {
