--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,14 @@
 /* Estilos globais */
-@import "/css/global.css/global.css";
-@import "/css/global.css/tipografia.css";
-@import "/css/global.css/cores.css";
+@import "/css/global/global.css";
+@import "/css/global/tipografia.css";
+@import "/css/global/cores.css";
+@import "/css/global/formulario.css";
 
 /* Header */
-@import "/css/global.css/header.css";
+@import "/css/global/header.css";
 
 /* Footer */
-@import "/css/global.css/footer.css";
+@import "/css/global/footer.css";
 
 /* Home */
 @import "/css/home/introducao.css";
@@ -20,6 +21,10 @@
 @import "/css/seguros/vantagens.css";
 @import "/css/seguros/perguntas-frequentes.css";
 @import "/css/seguros/seguro-bicicleta.css";
+
+/* Contato */
+@import "/css/contato/contato.css";
+@import "/css/contato/lojas.css";
 
 /* Termos */
 @import "/css/termos/termos.css";
